# visioncast-AI

./: .env.example  .gitignore  README.md
.github/workflows/: ci.yml
config/: design.json  license.json
docs/: DOCUMENTATION.md  README.md  USER_MANUAL.md
engine/: README.md
engine/include/visioncast/: gpu_compositor.h  zmq_endpoint.h
engine/src/: ffmpeg_rtmp.cpp  filter_chain.cpp  gpu_compositor.cpp  zmq_receiver.cpp
overlays/: README.md
python/: README.md  main.py  requirements.txt
python/ai/: detection.py  face_matcher.py  recognition.py  talent_db.py  talents_loader.py
python/ipc/: __init__.py  _config.py  protocol.py  zmq_sender.py
python/monitoring/: __init__.py  system_monitor.py
python/tests/: test_control_room.py  test_design_panel.py  test_device_scanner.py  test_gpu_compositor.py  test_license_manager.py  test_main_robustness.py  test_multi_rtmp.py  test_packaging.py  test_recognition_panel.py  test_sdk_integration.py  test_system_monitor.py  test_zmq_config.py
sdk/: README.md
sdk/src/: multi_rtmp_manager.cpp
talents/: talents.json
ui/: CMakeLists.txt  README.md
ui/include/visioncast_ui/: control_room.h  design_panel.h  device_scanner.h  license_config.h  license_manager.h  license_secure_logger.h  license_storage.h  main_window.h  monitoring_panel.h  output_config.h  qml_bridge.h
ui/qml/: Main.qml
ui/src/: control_room.cpp  design_panel.cpp  device_scanner.cpp  license_config.cpp  license_dialog.cpp  license_manager.cpp  license_secure_logger.cpp  license_storage.cpp  main.cpp  main_window.cpp  monitoring_panel.cpp  output_config.cpp  qml_bridge.cpp
ui/themes/: dark.qss
